--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,16 @@ find_package(OpenGL REQUIRED)
 # find_package(GLFW REQUIRED)
 find_package(glfw3 3.2 REQUIRED)
 # find_package(glfw3 REQUIRED)
+find_package(ImageMagick REQUIRED)
+find_package(ImageMagick COMPONENTS convert)
+find_package(ImageMagick COMPONENTS convert mogrify display)
+find_package(ImageMagick COMPONENTS Magick++)
+find_package(ImageMagick COMPONENTS Magick++ convert)
 
 include_directories(
 	${OPENGL_INCLUDE_DIR}
 	# ${GLFW_INCLUDE_DIR}
+	${ImageMagick_INCLUDE_DIRS}
 	include/
 	Tutorial1/include/
 )
@@ -21,6 +27,7 @@ add_executable(main
 target_link_libraries(main 
 	${OPENGL_LIBRARIES}
 	# ${GLFW_LIBRARIES}
+	${ImageMagick_LIBRARIES}
 	glfw
 )
 
